
Changes after 1.0b2:
-----------------------------

New Features:

       - Configuration dialog added -tpr
       - Ability to mark all entries as read on exit -tpr
       - Ability to change middle mouse button behaviour in browser -tpr
       - Ability to specify external browser (KDE default or custom command) - PhantomsDad
       - Fetch all feeds every <num> minutes -tpr

Bug Fixes:

#82618 - Don't crash if there's no kpart available -tpr
#82691 - Don't minimize but close aKregator when session is shutting down -tpr
       - Mark all read marks everything as read -tpr
#82752 - Mark all as read marks every entry in feed(group), mark all feeds as read marks every feed(group) as read -tpr

Changes from 1.0b1 to 1.0b2:
-----------------------------


New Features:

       - Add Search bar for searching text in articles
       - Clicking on a folder will show articles of all subitems
       - Feed images are stored and aren't fetched every time
       - Show progress while loading feed list
       - Make all shortcuts configurable
       - Gray out feed icons while fetching
       - Add context menus to the article and page readers
       - Add unread count to try icon
#81993 - Save splitter sizes on exit
#82004 - Next Unread in feed menu
#82005 - Link title in article viewer to article link
#82166 - Use ctrl-w to close tabs
#82084 - Middle click in article list opens article link in tab
#82095 - Show homepage in feed list context menu
#82189 - Option to fetch all at startup
       - Middleclick on viewer opens now an external browser
#82138 - Add context menu to the tabs with close and detach entries

Bug Fixes:

       - Favicon fetching works for sites that have never been viewed
       - Make opening large OPML lists much faster
       - Reset feed icon on fetch if it error-ed
       - Fix memory leak in adding feeds
       - Update unread count after deleting a feed
       - Don't write article archive upon reading a read article